5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1692_1100.log
== TEST (2019-04-25 18:45:08) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
if valor = 2:
	print("Animal: Targaruga")
elif valor = 5:
	print("Animal: Garça")
elif valor = 10:
	print("Animal: Arara")
elif valor = 20:
	print("Animal: Mico-leao-dourado")
elif valor = 50:
	print("Animal: Onca-pintada")
eçif valor = 100:
	print("Animal: Garoupa")
else:
	print
-- ERROR:
File "XXXX", line 2
    if valor = 2:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:45:21) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
if valor = 2:
	print("Animal: Targaruga")
elif valor = 5:
	print("Animal: Garça")
elif valor = 10:
	print("Animal: Arara")
elif valor = 20:
	print("Animal: Mico-leao-dourado")
elif valor = 50:
	print("Animal: Onca-pintada")
eçif valor = 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- ERROR:
File "XXXX", line 2
    if valor = 2:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:45:33) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
if valor == 2:
	print("Animal: Targaruga")
elif valor == 5:
	print("Animal: Garça")
elif valor == 10:
	print("Animal: Arara")
elif valor == 20:
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Animal: Onca-pintada")
eçif valor == 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- ERROR:
File "XXXX", line 12
    eçif valor == 100:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:46:10) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))

if valor == 2:
	print("Animal: Targaruga")
elif valor == 5:
	print("Animal: Garça")
elif valor == 10:
	print("Animal: Arara")
elif valor == 20:
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Animal: Onca-pintada")
eçif valor == 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- ERROR:
File "XXXX", line 13
    eçif valor == 100:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:46:32) 
-- CODE:
valor = int(input("digite o valor de uma cedula: (2/5/10/20/50/100)"))

if valor == 2:
	print("Animal: Targaruga")
elif valor == 5:
	print("Animal: Garça")
elif valor == 10:
	print("Animal: Arara")
elif valor == 20:
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Animal: Onca-pintada")
eçif valor == 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- ERROR:
File "XXXX", line 13
    eçif valor == 100:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:46:45) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))

if valor == 2:
	print("Animal: Targaruga")
elif valor == 5:
	print("Animal: Garça")
elif valor == 10:
	print("Animal: Arara")
elif valor == 20:
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Animal: Onca-pintada")
elif valor == 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:46:50) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))

if valor == 2:
	print("Animal: Targaruga")
elif valor == 5:
	print("Animal: Garça")
elif valor == 10:
	print("Animal: Arara")
elif valor == 20:
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Animal: Onca-pintada")
elif valor == 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- EXECUTION TIME:
0.168389
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:46:51) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))

if valor == 2:
	print("Animal: Targaruga")
elif valor == 5:
	print("Animal: Garça")
elif valor == 10:
	print("Animal: Arara")
elif valor == 20:
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Animal: Onca-pintada")
elif valor == 100:
	print("Animal: Garoupa")
else:
	print("Animal: Invalido") 
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:47:26) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))

if valor == 2:
	print("Entrada" + valor)
	print("Animal: Targaruga")
elif valor == 5:
	print("Entrada" + valor)
	print("Animal: Garça")
elif valor == 10:
	print("Entrada" + valor)
	print("Animal: Arara")
elif valor == 20:
	print("Entrada" + valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Entrada" + valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print("Entrada" + valor)
	print("Animal: Garoupa")
else:
	print("Entrada" + valor)
	print("Animal: Invalido") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print("Entrada" + valor)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:47:34) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))

if valor == 2:
	print("Entrada" + valor)
	print("Animal: Targaruga")
elif valor == 5:
	print("Entrada" + valor)
	print("Animal: Garça")
elif valor == 10:
	print("Entrada" + valor)
	print("Animal: Arara")
elif valor == 20:
	print("Entrada" + valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print("Entrada" + valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print("Entrada" + valor)
	print("Animal: Garoupa")
else:
	print("Entrada" + valor)
	print("Animal: Invalido") 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print("Entrada" + valor)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:48:20) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
e = "Entrada: "
if valor == 2:
	print(e, ",", valor)
	print("Animal: Targaruga")
elif valor == 5:
	print(e, ",", valor)
	print("Animal: Garça")
elif valor == 10:
	print(e, ",", valor)
	print("Animal: Arara")
elif valor == 20:
	print(e, ",", valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print(e, ",", valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print(e, ",", valor)
	print("Animal: Garoupa")
else:
	print(e, ",", valor)
	print("Animal: Invalido") 
-- OUTPUT:
Entrada:  , 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:48:51) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
e = "Entrada: "
if valor == 2:
	print(e, ",", valor)
	print("Animal: Targaruga")
elif valor == 5:
	print(e,valor)
	print("Animal: Garça")
elif valor == 10:
	print(e,valor)
	print("Animal: Arara")
elif valor == 20:
	print(e,valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print(e,valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print(e,valor)
	print("Animal: Garoupa")
else:
	print(e,valor)
	print("Animal: Invalido") 
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:49:06) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
e = "Entrada: "
if valor == 2:
	print(e,valor)
	print("Animal: Targaruga")
elif valor == 5:
	print(e,valor)
	print("Animal: Garça")
elif valor == 10:
	print(e,valor)
	print("Animal: Arara")
elif valor == 20:
	print(e,valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print(e,valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print(e,valor)
	print("Animal: Garoupa")
else:
	print(e,valor)
	print("Animal: Invalido") 
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:49:13) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
e = "Entrada: "
if valor == 2:
	print(e,valor)
	print("Animal: Targaruga")
elif valor == 5:
	print(e,valor)
	print("Animal: Garça")
elif valor == 10:
	print(e,valor)
	print("Animal: Arara")
elif valor == 20:
	print(e,valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print(e,valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print(e,valor)
	print("Animal: Garoupa")
else:
	print(e,valor)
	print("Animal: Invalido") 
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:49:13) 
-- CODE:
valor = int(input("digite o valor de uma cedula: "))
e = "Entrada: "
if valor == 2:
	print(e,valor)
	print("Animal: Targaruga")
elif valor == 5:
	print(e,valor)
	print("Animal: Garça")
elif valor == 10:
	print(e,valor)
	print("Animal: Arara")
elif valor == 20:
	print(e,valor)
	print("Animal: Mico-leao-dourado")
elif valor == 50:
	print(e,valor)
	print("Animal: Onca-pintada")
elif valor == 100:
	print(e,valor)
	print("Animal: Garoupa")
else:
	print(e,valor)
	print("Animal: Invalido") 
-- EXECUTION TIME:
0.161974
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
